--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,32 +1,45 @@
-<div class="grid_3">
-  <h3 class="title ui-state-default ui-corner-all">Projects</h3>
-  <div class="info">
-    <h6 style="float:left;">New project</h6><%= link_to new_project_path do %><span style="float:right;margin-bottom:20px;" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
-    <div class="clear"></div>
-    <% @projects.each do |p| %>
-      <p>
-        <%= link_to p.name, p %><br/><span style="color:#666;"> <%= pluralize(p.users.count, "user") %></span> / <span style="color:#666;"><%= pluralize(p.milestones.count, "milestone") %></span>
-        <%= link_to p, :method => :delete, :confim => "Are you sure?" do %><span style="float:right" title="Delete Project" class="ui-icon ui-icon-close ui-state-default ui-corner-all"></span><% end %><%= link_to new_project_milestone_path(p) do %><span style="float:right" title="Add Milestone" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %><%= link_to edit_project_path(p) do %><span style="float:right;" title="Add Milestone" class="ui-icon ui-icon-pencil ui-state-default ui-corner-all"></span><% end %>
-      </p>
-    <% end %>
-  </div>
-</div>
-<div class="grid_3">
-  <h3 class="title ui-state-default ui-corner-all">Users</h3>
-  <div class="info"> 
-    <h6 style="float:left;">New employee</h6><%= link_to new_employee_path do %><span style="float:right" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
-    <%= render Employee.all %>
-    <h6 style="float:left;">New client</h6><%= link_to new_client_path do %><span style="float:right" title="Delete" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
-    <%= render Client.all %>
-  </div>
-</div>
+<% if can? :manage, Project %>
+       <div class="grid_3">
+       <h3 class="title ui-state-default ui-corner-all">Projects</h3>
+       <div class="info">
+       <h6 style="float:left;">New project</h6><% if can? :manage, Project %><%= link_to new_project_path do %><span style="float:right;margin-bottom:20px;" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %><% end %>
+     <div class="clear"></div>
+     <% @projects.each do |p| %>
+       <p>
+       <%= link_to p.name, p %><br/><span style="color:#666;"> <%= pluralize(p.users.count, "user") %></span> / <span style="color:#666;"><%= pluralize(p.milestones.count, "milestone") %></span>
+         <% if can? :manage, p %><%= link_to p, :method => :delete, :confim => "Are you sure?" do %><span style="float:right" title="Delete Project" class="ui-icon ui-icon-close ui-state-default ui-corner-all"></span><% end %><%= link_to new_project_milestone_path(p) do %><span style="float:right" title="Add Milestone" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %><%= link_to edit_project_path(p) do %><span style="float:right;" title="Add Milestone" class="ui-icon ui-icon-pencil ui-state-default ui-corner-all"></span><% end %><% end %>
+         </p>
+       <% end %>
+       </div>
+       </div>
+       <div class="grid_3">
+       <h3 class="title ui-state-default ui-corner-all">Users</h3>
+       <div class="info"> 
+       <h6 style="float:left;">New employee</h6><%= link_to new_employee_path do %><span style="float:right" title="Add" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
+     <%= render Employee.all %>
+     <h6 style="float:left;">New client</h6><%= link_to new_client_path do %><span style="float:right" title="Delete" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %>
+   <%= render Client.all %>
+   </div>
+   </div>
 
+ <% else %>
+   <div class="grid_6">
+       <h3 class="title ui-state-default ui-corner-all">Projects</h3>
+<% @projects.each do |p| %>
+       <p>
+       <%= link_to p.name, p %><br/><span style="color:#666;"> <%= pluralize(p.users.count, "user") %></span> / <span style="color:#666;"><%= pluralize(p.milestones.count, "milestone") %></span>
+         <% if can? :manage, p %><%= link_to p, :method => :delete, :confim => "Are you sure?" do %><span style="float:right" title="Delete Project" class="ui-icon ui-icon-close ui-state-default ui-corner-all"></span><% end %><%= link_to new_project_milestone_path(p) do %><span style="float:right" title="Add Milestone" class="ui-icon ui-icon-plusthick ui-state-default ui-corner-all"></span><% end %><%= link_to edit_project_path(p) do %><span style="float:right;" title="Add Milestone" class="ui-icon ui-icon-pencil ui-state-default ui-corner-all"></span><% end %><% end %>
+         </p>
+       <% end %>
+
+   </div>
+ <% end %>
 <div class="grid_6">
   <h3 class="title ui-state-default ui-corner-all">News Feed</h3>
-  <div class="info">
-    <% @comments.each do |c| %>
+  <div id="news" class="info">
+    <% @news.each do |n| %>
       <p>
-        <%= render c if c.recipients.include?(current_user) %>
+        <%= render n %>
       </p>
     <% end %>
   </div>
